--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="/favicon.ico">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <style>
+    body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+    button {
+      padding: 16px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      margin: 1px 1px;
+      transition-duration: 0.4s;
+      cursor: pointer;
+      background-color: white; 
+      color: black; 
+      border: 2px solid #3fa1c2;
+      border-radius: 8px;
+    }
+    button:hover {
+      background-color: #3fa1c2;
+      color: white;
+    }
+  </style>
   <title>Fritter</title>
 </head>
 
-<body>
+<body class="w3-light-grey">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
@@ -18,4 +40,3 @@
   <!-- built files will be auto injected -->
 </body>
 
-</html>
